# tide-pod

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-05-16-album-art.md  2026-05-16-milkdrop-visualizer.md
docs/superpowers/specs/: 2026-05-16-album-art-design.md
tests/: test_album_art.py  test_analyzer.py  test_app_formatters.py  test_auth.py  test_config.py  test_devices.py  test_framebuffer.py  test_halfblock.py  test_now_playing.py  test_player_queue.py  test_presets.py
tide_pod/: __main__.py  album_art.py  app.py  auth.py  config.py  devices.py  player.py
tide_pod/screens/: album.py  device_picker.py  login.py  now_playing.py
tide_pod/visualizers/: __init__.py  base.py  framebuffer.py  halfblock.py  presets.py  widget.py
