[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tide-pod"
version = "0.1.0"
description = "Terminal Tidal client with bit-perfect ALSA output"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "tidalapi==0.8.11",
    "textual==8.2.6",
    "numpy==2.4.5",
    # PyGObject is expected from system site-packages (GStreamer bindings)
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]

[project.scripts]
tide-pod = "tide_pod.__main__:main"

[tool.setuptools.packages.find]
include = ["tide_pod*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
